changed the process further